[gd_scene load_steps=10 format=3 uid="uid://bcv1hhktkpqjf"]

[ext_resource type="Script" path="res://assets/scripts/player_interface.gd" id="1_3fje5"]
[ext_resource type="Shader" path="res://assets/objects/Player Interface.gdshader" id="2_bgvew"]
[ext_resource type="Texture2D" uid="uid://1ghif8vhwi2" path="res://assets/texture/Button-1/Continu-removebg-preview.png" id="3_goowm"]
[ext_resource type="Texture2D" uid="uid://datkcxcrk5o2g" path="res://assets/texture/Button-1/Reload-removebg-preview.png" id="4_t7wvt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tihp5"]
shader = ExtResource("2_bgvew")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_3qusl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5x2xs"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.88]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y4jq4"]
_data = {
"RESET": SubResource("Animation_3qusl"),
"blur": SubResource("Animation_5x2xs")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1mi0"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 4

[node name="PlayerInterface" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3fje5")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_tihp5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y4jq4")
}

[node name="Resume" type="Button" parent="."]
layout_mode = 2
offset_left = 465.0
offset_top = 300.0
offset_right = 1280.0
offset_bottom = 1273.0
scale = Vector2(0.215, 0.215)
focus_mode = 0
theme_override_font_sizes/font_size = 167
theme_override_styles/normal = SubResource("StyleBoxFlat_s1mi0")
text = "Resume"
icon = ExtResource("3_goowm")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Restart" type="Button" parent="."]
layout_mode = 2
offset_left = 1300.0
offset_top = 300.0
offset_right = 2053.0
offset_bottom = 1273.0
scale = Vector2(0.215, 0.215)
focus_mode = 0
theme_override_font_sizes/font_size = 167
theme_override_styles/normal = SubResource("StyleBoxFlat_s1mi0")
text = "Restart"
icon = ExtResource("4_t7wvt")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Vilage" type="Button" parent="."]
layout_mode = 2
offset_left = 660.0
offset_top = 755.5
offset_right = 1260.0
offset_bottom = 798.5
focus_mode = 0
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_s1mi0")
text = "Vilage"

[node name="Menu" type="Button" parent="."]
layout_mode = 2
offset_left = 660.0
offset_top = 845.5
offset_right = 1260.0
offset_bottom = 888.5
focus_mode = 0
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_s1mi0")
text = "Menu"

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = 660.0
offset_top = 935.5
offset_right = 1260.0
offset_bottom = 978.5
focus_mode = 0
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_s1mi0")
text = "Quit"

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Vilage" to="." method="_on_vilage_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
